tests/backpack/should_fail/bkpfail38.stderr
[1 of 3] Processing p
  [1 of 1] Compiling A[sig]           ( p\A.hsig, nothing )
[2 of 3] Processing q
  [1 of 1] Compiling A[sig]           ( q\A.hsig, nothing )
[3 of 3] Processing r
  [1 of 3] Compiling A[sig]           ( r\A.hsig, nothing )
bkpfail38.bkp:8:9: error: [GHC-93007]
    • Identifier ‘op’ has conflicting fixities in the module
      and its hsig file
      Main module: infixr 4
      Hsig file: infixr 6
    • While merging the signatures from:
        • p[A=<A>]:A
        • q[A=<A>]:A
        • ...and the local signature for A

